// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty-image prop 1`] = `
<div class="buri-coupon-list">
  <div class="buri-coupon-list__exchange-bar">
    <div class="buri-cell buri-cell--borderless buri-field buri-coupon-list__field">
      <div class="buri-cell__value buri-cell__value--alone">
        <div class="buri-field__body"><input type="text" placeholder="请输入优惠码" class="buri-field__control"></div>
      </div>
    </div><button disabled="disabled" class="buri-button buri-button--danger buri-button--normal buri-button--plain buri-button--disabled buri-coupon-list__exchange"><span class="buri-button__text">兑换</span></button>
  </div>
  <div class="buri-tabs buri-tabs--line buri-coupon-list__tab">
    <div class="buri-tabs__wrap">
      <div role="tablist" class="buri-tabs__nav buri-tabs__nav--line">
        <div role="tab" aria-selected="true" class="buri-tab buri-tab--active buri-ellipsis"><span class="buri-tab__text">可用 (0)<!----></span></div>
        <div role="tab" class="buri-tab buri-ellipsis"><span class="buri-tab__text">不可用 (0)<!----></span></div>
        <div class="buri-tabs__line"></div>
      </div>
    </div>
    <div class="buri-tabs__content">
      <div role="tabpanel" class="buri-tab__pane">
        <div class="buri-coupon-list__list buri-coupon-list__list--with-bottom" style="height: 628px;">
          <div class="buri-coupon-list__empty"><img src="https://img.yzcdn.com/xxx.png">
            <p>暂无优惠券</p>
          </div>
        </div>
      </div>
      <div role="tabpanel" class="buri-tab__pane" style="display: none;">
        <!---->
      </div>
    </div>
  </div>
  <div class="buri-coupon-list__bottom"><button class="buri-button buri-button--danger buri-button--normal buri-button--block buri-button--round buri-coupon-list__close"><span class="buri-button__text">不使用优惠券</span></button></div>
</div>
`;

exports[`render coupon cell 1`] = `
<div role="button" tabindex="0" class="buri-cell buri-cell--clickable buri-coupon-cell">
  <div class="buri-cell__title"><span>优惠券</span></div>
  <div class="buri-cell__value"><span>暂无可用</span></div><i class="buri-icon buri-icon-arrow buri-cell__right-icon">
    <!----></i>
</div>
`;

exports[`render coupon cell with coupon 1`] = `
<div role="button" tabindex="0" class="buri-cell buri-cell--clickable buri-coupon-cell">
  <div class="buri-cell__title"><span>优惠券</span></div>
  <div class="buri-cell__value buri-coupon-cell--selected"><span>-¥1.00</span></div><i class="buri-icon buri-icon-arrow buri-cell__right-icon">
    <!----></i>
</div>
`;

exports[`render coupon list 1`] = `
<div class="buri-coupon-list">
  <div class="buri-coupon-list__exchange-bar">
    <div class="buri-cell buri-cell--borderless buri-field buri-coupon-list__field">
      <div class="buri-cell__value buri-cell__value--alone">
        <div class="buri-field__body"><input type="text" placeholder="请输入优惠码" class="buri-field__control"></div>
      </div>
    </div><button disabled="disabled" class="buri-button buri-button--danger buri-button--normal buri-button--plain buri-button--disabled buri-coupon-list__exchange"><span class="buri-button__text">兑换</span></button>
  </div>
  <div class="buri-tabs buri-tabs--line buri-coupon-list__tab">
    <div class="buri-tabs__wrap">
      <div role="tablist" class="buri-tabs__nav buri-tabs__nav--line">
        <div role="tab" aria-selected="true" class="buri-tab buri-tab--active buri-ellipsis"><span class="buri-tab__text">可用 (6)<!----></span></div>
        <div role="tab" class="buri-tab buri-ellipsis"><span class="buri-tab__text">不可用 (2)<!----></span></div>
        <div class="buri-tabs__line"></div>
      </div>
    </div>
    <div class="buri-tabs__content">
      <div role="tabpanel" class="buri-tab__pane">
        <div class="buri-coupon-list__list buri-coupon-list__list--with-bottom" style="height: 628px;">
          <div class="buri-coupon">
            <div class="buri-coupon__content">
              <div class="buri-coupon__head">
                <h2 class="buri-coupon__amount"></h2>
                <p class="buri-coupon__condition">无使用门槛</p>
              </div>
              <div class="buri-coupon__body">
                <p class="buri-coupon__name"></p>
                <p class="buri-coupon__valid">2017.03.10 - 2017.12.30</p>
                <div role="checkbox" tabindex="0" aria-checked="false" class="buri-checkbox buri-coupon__corner" size="18">
                  <div class="buri-checkbox__icon buri-checkbox__icon--round"><i class="buri-icon buri-icon-success">
                      <!----></i></div>
                </div>
              </div>
            </div>
          </div>
          <div class="buri-coupon">
            <div class="buri-coupon__content">
              <div class="buri-coupon__head">
                <h2 class="buri-coupon__amount"><span>¥</span> 1.5</h2>
                <p class="buri-coupon__condition">无使用门槛</p>
              </div>
              <div class="buri-coupon__body">
                <p class="buri-coupon__name">name</p>
                <p class="buri-coupon__valid">2017.03.10 - 2017.12.30</p>
                <div role="checkbox" tabindex="0" aria-checked="true" class="buri-checkbox buri-coupon__corner" size="18">
                  <div class="buri-checkbox__icon buri-checkbox__icon--round buri-checkbox__icon--checked"><i class="buri-icon buri-icon-success" style="border-color: #ee0a24; background-color: rgb(238, 10, 36);">
                      <!----></i></div>
                </div>
              </div>
            </div>
            <p class="buri-coupon__description">description</p>
          </div>
          <div class="buri-coupon">
            <div class="buri-coupon__content">
              <div class="buri-coupon__head">
                <h2 class="buri-coupon__amount"><span>¥</span> 1</h2>
                <p class="buri-coupon__condition">无使用门槛</p>
              </div>
              <div class="buri-coupon__body">
                <p class="buri-coupon__name">name</p>
                <p class="buri-coupon__valid">2017.03.10 - 2017.12.30</p>
                <div role="checkbox" tabindex="0" aria-checked="false" class="buri-checkbox buri-coupon__corner" size="18">
                  <div class="buri-checkbox__icon buri-checkbox__icon--round"><i class="buri-icon buri-icon-success">
                      <!----></i></div>
                </div>
              </div>
            </div>
            <p class="buri-coupon__description">description</p>
          </div>
          <div class="buri-coupon">
            <div class="buri-coupon__content">
              <div class="buri-coupon__head">
                <h2 class="buri-coupon__amount"><span>¥</span> 1.23</h2>
                <p class="buri-coupon__condition">无使用门槛</p>
              </div>
              <div class="buri-coupon__body">
                <p class="buri-coupon__name">name</p>
                <p class="buri-coupon__valid">2017.03.10 - 2017.12.30</p>
                <div role="checkbox" tabindex="0" aria-checked="false" class="buri-checkbox buri-coupon__corner" size="18">
                  <div class="buri-checkbox__icon buri-checkbox__icon--round"><i class="buri-icon buri-icon-success">
                      <!----></i></div>
                </div>
              </div>
            </div>
            <p class="buri-coupon__description">description</p>
          </div>
          <div class="buri-coupon">
            <div class="buri-coupon__content">
              <div class="buri-coupon__head">
                <h2 class="buri-coupon__amount">8.8折</h2>
                <p class="buri-coupon__condition">满0.5元可用</p>
              </div>
              <div class="buri-coupon__body">
                <p class="buri-coupon__name">name</p>
                <p class="buri-coupon__valid">2017.03.10 - 2017.12.30</p>
                <div role="checkbox" tabindex="0" aria-checked="false" class="buri-checkbox buri-coupon__corner" size="18">
                  <div class="buri-checkbox__icon buri-checkbox__icon--round"><i class="buri-icon buri-icon-success">
                      <!----></i></div>
                </div>
              </div>
            </div>
          </div>
          <div class="buri-coupon">
            <div class="buri-coupon__content">
              <div class="buri-coupon__head">
                <h2 class="buri-coupon__amount">9折</h2>
                <p class="buri-coupon__condition">满0.5元可用</p>
              </div>
              <div class="buri-coupon__body">
                <p class="buri-coupon__name">name</p>
                <p class="buri-coupon__valid">2017.03.10 - 2017.12.30</p>
                <div role="checkbox" tabindex="0" aria-checked="false" class="buri-checkbox buri-coupon__corner" size="18">
                  <div class="buri-checkbox__icon buri-checkbox__icon--round"><i class="buri-icon buri-icon-success">
                      <!----></i></div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div role="tabpanel" class="buri-tab__pane" style="display: none;">
        <!---->
      </div>
    </div>
  </div>
  <div class="buri-coupon-list__bottom"><button class="buri-button buri-button--danger buri-button--normal buri-button--block buri-button--round buri-coupon-list__close"><span class="buri-button__text">不使用优惠券</span></button></div>
</div>
`;

exports[`render disabled coupon 1`] = `
<div class="buri-coupon buri-coupon--disabled">
  <div class="buri-coupon__content">
    <div class="buri-coupon__head">
      <h2 class="buri-coupon__amount"><span>¥</span> 1.5</h2>
      <p class="buri-coupon__condition">无使用门槛</p>
    </div>
    <div class="buri-coupon__body">
      <p class="buri-coupon__name">name</p>
      <p class="buri-coupon__valid">2017.03.10 - 2017.12.30</p>
    </div>
  </div>
  <p class="buri-coupon__description">reason</p>
</div>
`;

exports[`render empty coupon list 1`] = `
<div class="buri-coupon-list">
  <div class="buri-coupon-list__exchange-bar">
    <div class="buri-cell buri-cell--borderless buri-field buri-coupon-list__field">
      <div class="buri-cell__value buri-cell__value--alone">
        <div class="buri-field__body"><input type="text" placeholder="请输入优惠码" class="buri-field__control"></div>
      </div>
    </div><button disabled="disabled" class="buri-button buri-button--danger buri-button--normal buri-button--plain buri-button--disabled buri-coupon-list__exchange"><span class="buri-button__text">兑换</span></button>
  </div>
  <div class="buri-tabs buri-tabs--line buri-coupon-list__tab">
    <div class="buri-tabs__wrap">
      <div role="tablist" class="buri-tabs__nav buri-tabs__nav--line">
        <div role="tab" class="buri-tab buri-ellipsis"><span class="buri-tab__text">可用 (0)<!----></span></div>
        <div role="tab" class="buri-tab buri-tab--active buri-ellipsis" aria-selected="true"><span class="buri-tab__text">不可用 (0)<!----></span></div>
        <div class="buri-tabs__line"></div>
      </div>
    </div>
    <div class="buri-tabs__content">
      <div role="tabpanel" class="buri-tab__pane" style="display: none;">
        <div class="buri-coupon-list__list buri-coupon-list__list--with-bottom" style="height: 628px;">
          <div class="buri-coupon-list__empty"><img src="https://img.yzcdn.cn/buri/coupon-empty.png">
            <p>暂无优惠券</p>
          </div>
        </div>
      </div>
      <div role="tabpanel" class="buri-tab__pane" style="">
        <div class="buri-coupon-list__list buri-coupon-list__list--with-bottom" style="height: 628px;">
          <div class="buri-coupon-list__empty"><img src="https://img.yzcdn.cn/buri/coupon-empty.png">
            <p>暂无优惠券</p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="buri-coupon-list__bottom"><button class="buri-button buri-button--danger buri-button--normal buri-button--block buri-button--round buri-coupon-list__close"><span class="buri-button__text">不使用优惠券</span></button></div>
</div>
`;
